# fret-analysis

./: .gitignore  README.md  REUSE.toml  pyproject.toml  smfret_analysis.py
bulkfret_analysis/: __init__.py  draap.py
notebooks/: 01. Tracking split.ipynb  01. Tracking.ipynb  02. Analysis.ipynb  02. Filter.ipynb  03. Plots.ipynb  Inspect.ipynb
scripts/: convert_012to013.py  flatfield_savefile_conv.py  tracking_yaml_007to008.py  tracking_yaml_008to010.py  tracking_yaml_011to012.py
smfret_analysis/: __init__.py  analyzer.py  data_store.py  filter.py  inspector.py  inspector_gui.py  inspector_gui.qml  plotter.py  tracker.py  tracker_base.py  tracker_nbui.py  typing_extensions.py  version.py
smfret_analysis/base/: __init__.py  analyzer.py  analyzer_base.py  analyzer_inter.py  analyzer_intra.py  plotter.py  tracker.py  tracker_base.py  tracker_inter.py  tracker_intra.py
smfret_analysis/gui/: __init__.py  inspector.py  inspector.qml
smfret_analysis/nbui/: __init__.py  analyzer.py  plotter.py  tracker.py
tests/: __init__.py  test_base_analyzer.py  test_base_tracker.py  test_tracker_base.py
